# Performance

./: .gitignore
gRPCvREST/: README.md
gRPCvREST/client/: index.html  index.js
gRPCvREST/client/service/: Cargo.toml  build.rs
gRPCvREST/client/service/src/: imagestorage.rs  lib.rs
gRPCvREST/proto/: imagestorage.proto
gRPCvREST/service/: Cargo.toml  build.rs
gRPCvREST/service/src/: imagestorage.rs  main.rs  rest.rs  streaming.rs
gRPCvREST/service/src/grpc/: grpc_services.rs  imagestorage.rs
gRPCvREST/service/src/proto/: image.proto
gRPCvREST/test_service/: Cargo.toml  README.md
gRPCvREST/test_service/src/: imagestorage.rs  main.rs
