[package]
name = "service"
version = "0.1.1"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
image = "0.24.7"
serde = {version = "1.0.171", features = ["derive"]}
env_logger = "0.10.0"
jpeg-encoder = "0.5.1"
tonic = { version = "0.10.2", default-features = true, features = ["tls"] }
tonic-web = "0.10.2"
prost = "0.12.1"
tokio = {version = "1.32.0", features = ["full"]}

[build-dependencies]
tonic-build = "0.10.2"
