[package]
name = "service"
version = "0.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.87"

console_error_panic_hook = { version = "0.1.7", optional = true }

wee_alloc = { version = "0.4.5", optional = true }