[package]
name = "service"
version = "0.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
prost = "0.12.1"
tonic = { version = "0.10.2", default-features = false, features = [
    "prost",
    "codegen",
] }
tonic-web-wasm-client = "0.5.0"

[build-dependencies]
tonic-build = { version = "0.10.2", default-features = false, features = [
    "prost",
] }


